[gd_scene load_steps=4 format=3 uid="uid://bi48pcqfkpx6f"]

[ext_resource type="Script" path="res://level_builder/level_builder.gd" id="1_dhbf8"]
[ext_resource type="PackedScene" uid="uid://b2jr0y8dmjp3e" path="res://source/block_scenes/default_block/block.tscn" id="2_qal26"]
[ext_resource type="Texture2D" uid="uid://dyjxemk2c3o6k" path="res://level_builder/cursor.png" id="3_ytagf"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_dhbf8")

[node name="block_folder" type="Node2D" parent="."]

[node name="default_block" parent="block_folder" instance=ExtResource("2_qal26")]
position = Vector2(-160, 80)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-57, 73)
current = true
zoom = Vector2(3, 3)

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(-108, 124)
texture = ExtResource("3_ytagf")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -126.0
offset_bottom = 64.0
grow_horizontal = 0
text = "export"

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
